# znayka_video

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  download_video.py  explicit_content_cut.py  main.py  pyproject.toml  run_download.ps1  run_download.sh  run_subtitles_to_markdown.ps1  run_subtitles_to_markdown.sh  run_transcribe.ps1  run_transcribe.sh  sidecar_replace.py  subtitles_to_markdown.py  transcribe.py  translate_srt.py
.qwen/rules/: python-codestyle.md
cleaned/original/: Bebebears - A trip to the stars - Episode 18 - Kids Show - Super ToonsTV.srt  Bebebears - Dragon Heroes - Episode 19 - Kids Show - Super ToonsTV.srt  Bebebears - Episode 1 - Star story - Super ToonsTV.srt  Bebebears - Episode 21 - Giant Franny Kids Show   Super ToonsTV.srt  Bebebears - Episode 3 - Mushroom Machine - Super ToonsTV.srt  Bebebears - Episode 4 - Journey - Super ToonsTV.srt  Bebebears - Episode 5 - Reminder - Super ToonsTV.srt  Bebebears - Episode 6 - Real Food vs. Gummy Food - Super ToonsTV.srt  Bebebears - Episode 8 - To heal a tree Super ToonsTV HD.srt  (+13 more)
docs/: integration-plan.md
integration_service/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  worker_main.py
integration_service/app/: __init__.py  config.py  explicit_cut_service.py  main.py  models.py  plan_store.py  runner.py  store.py  worker.py
integration_service/data/: jobs.json
integration_service/scripts/local/: run_app.py  run_worker.py
integration_service/tests/: test_explicit_cut_api.py
tests/: test_subtitles_to_markdown.py
(+26 files in other folders)
